05-AGIC-Backend-PathPrefix/kube-manifests/03-Ingress-backend-path-prefix.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxapp1-ingress-service
  annotations:
    appgw.ingress.kubernetes.io/backend-path-prefix: "/app1/"    
spec:
  ingressClassName: azure-application-gateway
  rules:
    - http:
        paths:
          - path: /myapps/app1
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port: 
                  number: 80
